Fix for bug 78363 "Beachball in Mac `spinning' cursor should actually spin". r=pinkerton@netscape.com sr=sfraser@netscape.com